# OpenSSL-VPN

./: .gitignore  CMakeLists.txt  README-cn.md  README.md  add_trusted.sh  build.sh  gen_certs.sh
application/: CMakeLists.txt  client.c  server.c
ca_file/: ca.crt  ca.key
common/: CMakeLists.txt  application.c  common.c  signal.c
config/: config  config.sample
include/: vpn_common.h
include/common/: application.h  common.h  signal.h
include/network/: common.h  setup.h  subnet.h
include/utils/: ssl.h
network/: CMakeLists.txt  setup.c  subnet.c
scripts/: CMakeLists.txt  add_trusted.sh  build.sh  env_check.sh  gen_certs.sh
src/: CMakeLists.txt  vpn_client.c  vpn_common.c  vpn_server.c
utils/: CMakeLists.txt  ssl.c
